# autotools

./: README.md  androgenized-testapp.tgz  testapp.tgz  testlib.tgz
androgenized-testapp-02/jni/: autogen.sh
androgenized-testapp-02/jni/src/: Makefile.am
androgenized-testapp/jni/: Application.mk  Makefile.am  autogen.sh  testlib.c  testlib.h
android-app-01/jni/: Makefile.am  autogen.sh  configure.ac
android-app-01/jni/src/: Makefile.am  testapp.c
automake-autoconf-template-project/: configure.ac
autotools-book/jupiter-autoconf-ch3/: configure.ac
autotools-book/jupiter-autoconf-ch4/: configure.ac
boostTest/: boostSimd.cpp  boostSimd.h  main.cpp
c/: README.md  about.c  create_variable  define_makefile_variable  mkdisable.sh  mkenable.sh  progs_makefile
c/01/: README.md  configure.ac
c/01/src/: Makefile.am
c/02/: README.md  configure.ac
c/03/: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  libtool
c/03/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
c/03/lib/: Makefile  Makefile.am  Makefile.in  libmyapp.la  soma.lo
c/03/lib/.deps/: soma.Plo
c/03/lib/.libs/: libmyapp.la  libmyapp.lai  libmyapp.so.0.0.0
c/03/src/: Makefile  Makefile.am  Makefile.in  Myapp
c/03/src/.deps/: Myapp-main.Po
c/03/src/.libs/: Myapp
c/04/: Makefile.am  README.md
c/05/: Makefile.am
c/07/: configure.ac
c/07/src/: Makefile.am
c/08/: configure.ac
c/08/src/: main.c
c/efl/1/: example.c
c/efl/2/: hello-world.c
c/efl/3/: hello-world  hello-world.c
c/efl/4/: README.md  eo_classes_main.c  example_rectangle.eo
c/efl/5/: example.eo  example_rectangle.eo.h  example_square.eo
c/gtk/01/: Makefile  README.md
c/gtk/02/: Makefile.am  configure.ac
c/gtk/02/src/hello/: Makefile.in
c/gtk/03/: Makefile  README.md
ex-01/: README.md  autogen.sh  configure.ac
ex-01/src/: A1.cpp  B1.cpp  B1.h  Makefile.am
ex-02/src/: Makefile.am
ex-02/src/main/cpp/: Makefile.am  main.cpp
ex-02/src/main/cpp/alpha/: A.cpp
ex-02/src/main/cpp/beta/: B.cpp
ex-02/src/main/cpp/gama/: Makefile.am
ex-03/: Makefile.am  README.md  configure.ac
ex-03/src/: Makefile.am
ex-03/src/main/cpp/alpha/: A.h  Makefile.am
ex-03/src/main/cpp/beta/: B.cpp  B.h  Makefile.am
ex-03/src/main/cpp/gama/: G.cpp  G.h
ex-04/: configure.ac
ex-04/src/: Makefile.am  Mamifero.cpp  Mamifero.h  Mamifero_test.cpp  hhh.cpp
ex-05/: Makefile.am  autogen.sh  configure.ac
ex-05/common/a/: Makefile.am  a.c  dois.c  dois.h  um.c  um.h
ex-06/: .local.vimrc  .projections.json  Makefile.am  configure.ac
ex-06/source/: Makefile  Makefile.am
gst-stream-server/: configure.ac
taylor/: autogen.sh  configure.ac
taylor/maple/: Makefile.am
taylor/maple/exemplo01/: Makefile.am  latex.mk
