#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([ExemploAplicacao], [1.0], [lopesivan.ufrj@gmail.com])
AC_CONFIG_SRCDIR([src/main/cpp/main.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

AM_INIT_AUTOMAKE($PACKAGE_NAME,$PACKAGE_VERSION)

# Checks for libraries.
LT_INIT

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/main/Makefile
                 src/main/cpp/Makefile
                 src/main/cpp/alpha/Makefile
                 src/main/cpp/beta/Makefile
                 src/main/cpp/gama/Makefile])
AC_OUTPUT
