lib_LTLIBRARIES=libsimples.la # lib de nome simples
libsimples_la_SOURCES=B1.cpp  # código que implementa a lib de nome simples

include_HEADERS=B1.h          # adição da header que define a lib simples

bin_PROGRAMS=app              # app é o nome do programa compilado
app_SOURCES=A1.cpp            # código que implementa o programa app
app_LDADD=libsimples.la       # biblioteca lincada pelo programa app
