if CONFIG_TEX

include latex.mk

teste:
	@echo $(LN_S)
	@echo $(SED)
	@echo $(MKDIR_P)
	@echo == $(HAS_TP) ==
	@echo == $(CONF_XDISP) ==
	@echo == $(III) ==
	@echo == $(UNITE_MODE) ==
	@echo == $(FFMPEG_CFLAGS) ==
	@echo == $(FFMPEG_LIBS) ==
	@echo == XXX $(XXX_CFLAGS) ==
	@echo == XXX $(XXX_LIBS) ==
	@echo == ZZZ $(ASYNC_EXEC) ==

CLEANFILES  = $(OUT)

endif
# END OF FILE
